// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetadataIcon: Component should render correctly 1`] = `
<metadata.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;

exports[`MetadataIcon: Component should render with custom styles 1`] = `
<metadata.svg
  style={
    Object {
      "fill": "blue",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;
